name:                mpg123
version:             0.1.0.0
synopsis:            Bindings for libmpg123
description:         Raw bindings for libmpg123 (v 1.20.1).
license:             BSD3
license-file:        LICENSE
author:              Miroslav Puda
maintainer:          pakanek@gmail.com
copyright:           Miroslav Puda (2017)
category:            Codec
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Codec.Mpg123.Raw
  -- other-modules:
  other-extensions:    ForeignFunctionInterface
  build-depends:       base >=4.6 && <5
  hs-source-dirs:      src
  build-tools:         hsc2hs
  default-language:    Haskell2010
  includes:            mpg123.h
  extra-libraries:     mpg123